--- a/LoLDraftAppWeb/.gitignore
+++ b/LoLDraftAppWeb/.gitignore
@@ -5,10 +5,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
+# Dependencies
 node_modules
-dist-ssr
+
+# Build output
+/dist-ssr
 *.local
 
 # Editor directories and files
@@ -22,4 +24,11 @@ dist-ssr
 *.sln
 *.sw?
 
-src
+# Source files (exclude from git but keep in project)
+/src/*
+!/src/main.jsx
+!/src/App.jsx
+!/src/index.css
+
+# Public assets will be copied to dist during build
+/public
