--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,16 +23,10 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
-      - name: Change directory to LoLDraftAppWeb
-        working-directory: ./LoLDraftAppWeb
-        run: pwd
-
       - name: Install dependencies
-        working-directory: ./LoLDraftAppWeb
         run: npm ci
 
       - name: Build
-        working-directory: ./LoLDraftAppWeb
         run: npm run build
         env:
           NODE_ENV: production
@@ -43,7 +37,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'LoLDraftAppWeb/dist/'
+          path: 'dist/'
 
   deploy:
     environment:
