--- a/LoLDraftAppWeb/package.json
+++ b/LoLDraftAppWeb/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "lol-draft-app",
+  "name": "frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://niickzl.github.io/LoLDraftAppWeb",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vite build --base=/LoLDraftAppWeb/",
+    "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.1.1",
