--- a/LoLDraftAppWeb/.gitignore
+++ b/LoLDraftAppWeb/.gitignore
@@ -5,12 +5,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
-# Dependencies
 node_modules
-
-# Build output
-/dist-ssr
+dist-ssr
 *.local
 
 # Editor directories and files
@@ -24,11 +22,4 @@ node_modules
 *.sln
 *.sw?
 
-# Source files (exclude from git but keep in project)
-/src/*
-!/src/main.jsx
-!/src/App.jsx
-!/src/index.css
-
-# Public assets will be copied to dist during build
-/public
+src
